# dediren

./: .git-blame-ignore-revs  .gitignore  .lean-audit.toml  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md  build.gradle.kts  gradle.properties  mvnw  pom.xml  settings.gradle.kts  spotbugs-exclude.xml
.cargo/: about.hbs  about.toml  config.toml
.githooks/: README.md  pre-commit
.github/: CODEOWNERS  dependabot.yml
.github/rulesets/: README.md  main-protection.json  main-required-checks.json  release-tags.json
.github/workflows/: ci.yml  codeql.yml  dependency-audit.yml  release.yml
.well-known/: security.txt
apps/cli/: build.gradle.kts  pom.xml
archimate/: pom.xml
cli/: pom.xml
contracts/: pom.xml
core/: pom.xml
coverage-report/: pom.xml
crates/dediren-archimate/: Cargo.toml
crates/dediren-cli/: Cargo.toml
crates/dediren-cli/src/: main.rs
crates/dediren-cli/tests/: cli_export.rs  cli_help.rs  cli_layout.rs  cli_pipeline.rs  cli_project.rs  cli_render.rs  cli_validate.rs  dist_scripts.rs  plugin_compat.rs  real_elk_render.rs
crates/dediren-cli/tests/common/: mod.rs
crates/dediren-contracts/: Cargo.toml
crates/dediren-contracts/src/: lib.rs
crates/dediren-contracts/tests/: contract_roundtrip.rs  schema_contracts.rs
crates/dediren-core/: Cargo.toml
crates/dediren-core/src/: commands.rs  io.rs  lib.rs  plugins.rs  quality.rs  source.rs  validate.rs
crates/dediren-core/tests/: commands.rs  layout_quality.rs  plugin_runtime.rs
crates/dediren-core/tests/common/: mod.rs
crates/dediren-plugin-archimate-oef-export/: Cargo.toml
crates/dediren-plugin-archimate-oef-export/src/: main.rs
crates/dediren-plugin-archimate-oef-export/tests/: oef_export_plugin.rs
crates/dediren-plugin-archimate-oef-export/tests/common/: mod.rs
crates/dediren-plugin-elk-layout/: Cargo.toml
crates/dediren-plugin-generic-graph/: Cargo.toml
crates/dediren-plugin-generic-graph/src/: main.rs
crates/dediren-plugin-generic-graph/tests/: generic_graph_plugin.rs
crates/dediren-plugin-generic-graph/tests/common/: mod.rs
crates/dediren-plugin-runtime-testbed/: Cargo.toml
crates/dediren-plugin-runtime-testbed/src/: main.rs
crates/dediren-plugin-schema-cache/: Cargo.toml
crates/dediren-plugin-svg-render/: Cargo.toml
crates/dediren-plugin-svg-render/src/: main.rs
crates/dediren-plugin-svg-render/tests/: svg_render_plugin.rs
crates/dediren-plugin-svg-render/tests/svg_render_plugin/: archimate_groups.rs  archimate_nodes.rs  archimate_relationships.rs  common.rs  edge_labels.rs  render_contracts.rs  uml_activity.rs  uml_nodes.rs  uml_relationships.rs  viewbox_routes.rs
crates/dediren-plugin-uml-xmi-export/: Cargo.toml
crates/dediren-plugin-uml-xmi-export/src/: main.rs
crates/dediren-plugin-uml-xmi-export/tests/: uml_xmi_export_plugin.rs
crates/dediren-plugin-uml-xmi-export/tests/common/: mod.rs
crates/dediren-uml/: Cargo.toml
dist-tool/: pom.xml
docs/: agent-usage.md  architecture-guidelines.md  plugin-authoring.md  threat-model.md
docs/assets/: README.md  pipeline.render-policy.json  pipeline.source.json
docs/features/: README.md  contracts-and-schemas.md  distribution-and-runtime.md  engine-runtime.md  exports.md  layout.md  pipeline-and-commands.md  plugin-runtime.md  source-model.md  svg-render.md
engine-api/: pom.xml
engines/archimate-oef-export/: pom.xml
engines/elk-layout/: pom.xml
engines/generic-graph/: pom.xml
engines/render/: pom.xml
engines/uml-xmi-export/: pom.xml
fixtures/build-result/: basic.json  error.json
fixtures/export/: oef-basic.xml  uml-activity.xmi  uml-basic.xmi  uml-complex-class.xmi  uml-component-basic.xmi  uml-data.xmi  uml-deployment-basic.xmi  uml-generalization.xmi  uml-sequence-basic.xmi  uml-sequence-fragments.xmi  uml-state-machine-basic.xmi  uml-use-case-basic.xmi
fixtures/layout-request/: basic.json
fixtures/layout-result/: archimate-oef-basic.json  basic.json  pipeline-rich.json  uml-activity.json  uml-basic.json  uml-complex-class.json  uml-component-basic.json  uml-data.json  uml-deployment-basic.json  uml-generalization.json  uml-sequence-basic.json  uml-sequence-fragment-chrome.json  uml-sequence-fragments.json  uml-sequence-lifecycle.json  uml-sequence-self-message.json  uml-sequence-validatable.json  uml-state-machine-basic.json  uml-use-case-basic.json
fixtures/plugins/: archimate-oef.manifest.json  elk-layout.manifest.json  generic-graph.manifest.json  render.manifest.json  svg-render.manifest.json  uml-xmi.manifest.json
fixtures/render-metadata/: uml-basic.json  uml-complex-class.json  uml-component-basic.json  uml-deployment-basic.json  uml-sequence-basic.json  uml-sequence-fragments.json  uml-sequence-lifecycle.json  uml-sequence-self-message.json  uml-state-machine-basic.json  uml-use-case-basic.json
fixtures/render-policy/: archimate-svg.json  dark-svg.json  default-svg.json  generic-shapes-svg.json  interactive-svg.json  rich-svg.json  uml-svg.json
fixtures/source/: valid-archimate-junction.json  valid-archimate-oef.json  valid-basic.json  valid-pipeline-archimate.json  valid-pipeline-rich.json  valid-uml-basic.json  (+10 more)
gradle/: libs.versions.toml
ir/: pom.xml
mcp/: pom.xml
mcp-server/: pom.xml
schema-cache/: pom.xml
schemas/: build-result.schema.json  bundle.schema.json  diff-result.schema.json  envelope.schema.json  export-request.schema.json  export-result.first-party.schema.json  layout-request.schema.json  layout-result.schema.json  model.schema.json  oef-export-policy.schema.json  plugin-manifest.schema.json  query-result.schema.json  render-policy.schema.json  render-result.schema.json  status-result.schema.json  svg-render-policy.schema.json  uml-xmi-export-policy.schema.json  verify-result.schema.json
scripts/: build-dist.sh  regen-layout-fixtures.sh  regen-render-goldens.sh  smoke-dist.sh
semantics-archimate/: pom.xml
semantics-graph/: pom.xml
semantics-uml/: pom.xml
test-support/: build.gradle.kts  pom.xml
uml/: pom.xml
xtask/: Cargo.toml
xtask/src/: main.rs
xtask/tests/: dist.rs
(+868 files in other folders)
