[workspace]
members = [
  "crates/dediren-archimate",
  "crates/dediren-contracts",
  "crates/dediren-core",
  "crates/dediren-cli",
  "crates/dediren-plugin-generic-graph",
  "crates/dediren-plugin-elk-layout",
  "crates/dediren-plugin-svg-render",
  "crates/dediren-plugin-archimate-oef-export",
  "crates/dediren-plugin-runtime-testbed",
  "xtask",
]
resolver = "2"

[workspace.package]
version = "0.8.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/souroldgeezer/dediren"
homepage = "https://github.com/souroldgeezer/dediren"
rust-version = "1.93"

[workspace.dependencies]
anyhow = "1"
assert_cmd = "2"
assert_fs = "1"
clap = { version = "4", features = ["derive"] }
dediren-archimate = { path = "crates/dediren-archimate" }
jsonschema = "0.33"
libc = "0.2"
predicates = "3"
quick-xml = "0.38"
roxmltree = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
thiserror = "2"
