[package]
name = "dediren"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "dediren"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
dediren-contracts = { path = "../dediren-contracts" }
dediren-core = { path = "../dediren-core" }
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
assert_fs.workspace = true
predicates.workspace = true
roxmltree.workspace = true
