[package]
name = "dediren-plugin-archimate-oef-export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "dediren-plugin-archimate-oef-export"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
dediren-contracts = { path = "../dediren-contracts" }
quick-xml.workspace = true
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
roxmltree.workspace = true
