[package]
name = "dediren-plugin-uml-xmi-export"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
rust-version.workspace = true

[[bin]]
name = "dediren-plugin-uml-xmi-export"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
dediren-contracts.workspace = true
dediren-plugin-schema-cache.workspace = true
dediren-uml.workspace = true
jsonschema.workspace = true
quick-xml.workspace = true
roxmltree.workspace = true
serde_json.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
tempfile.workspace = true
